--- a/index.html
+++ b/index.html
@@ -3,12 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <title></title>
+    <meta name="description" content="A simple portfolio made by Darius, for EDEN School">
+    <title>Darius Pessin Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <script src="main.js" defer async></script>
 </head>
 <body>
-
+  <header>
+    <nav>
+      <h1>adamkeys</h1>
+      <ul class="link">
+        <li><a href="https://github.com/CyriGolo"><img src="icon-github.svg" alt="github"></a></li>
+        <li><a href="https://edenschool.fr"><img src="icon-custom.svg" alt="custom"></a></li>
+        <li><a href="https://linkedin.com"><img src="icon-linkedin.svg" alt="linkedin"></a></li>
+        <li><a href="https://twitter.com"><img src="icon-twitter.svg" alt="twitter"></a></li>
+      </ul>
+    </nav>
+    <img src="pattern-rings.svg" alt="rings" class="rings">
+    <img src="pattern-circle.svg" alt="circle" class="circle">
+    <section>
+      <article>
+        <h2>Nice to meet you!</h2>
+        <h2>I'm <span>Adam Keyes</span>.</h2>
+        <p>Based in the UK, I’m a front-end developer passionate about building accessible web apps that users love.</p>
+        <a class="contact" href="mailto:email@example.com">CONTACT ME</a>
+      </article>
+      <img id="tablet" src="image-profile-tablet.webp" alt="profile-tablet">
+      <img id="desktop" src="image-profile-desktop.webp" alt="profile-desktop">
+    </section>
+  </header>
+  <main>
+    <hr>
+    <ul>
+      <li>
+        <h3>HTML</h3>
+        <p>4 Years Experience</p>
+      </li>
+      <li>
+        <h3>CSS</h3>
+        <p>4 Years Experience</p>
+      </li>
+      <li>
+        <h3>Javascript</h3>
+        <p>4 Years Experience</p>
+      </li>
+      <li>
+        <h3>Accesibility</h3>
+        <p>4 Years Experience</p>
+      </li>
+      <li>
+        <h3>React</h3>
+        <p>3 Years Experience</p>
+      </li>
+      <li>
+        <h3>Sass</h3>
+        <p>3 Years Experience</p>
+      </li>
+    </ul>
+  </main>
 </body>
 </html>
