Desktop (final version)

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </nav>
     <img src="pattern-rings.svg" alt="rings" class="rings">
     <img src="pattern-circle.svg" alt="circle" class="circle">
-    <section>
+    <div>
       <article>
         <h2>Nice to meet you!</h2>
         <h2>I'm <span>Adam Keyes</span>.</h2>
@@ -30,7 +30,7 @@
       </article>
       <img id="tablet" src="image-profile-tablet.webp" alt="profile-tablet">
       <img id="desktop" src="image-profile-desktop.webp" alt="profile-desktop">
-    </section>
+    </div>
   </header>
   <main>
     <hr>
