add projects section

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav>
       <h1>adamkeys</h1>
       <ul class="link">
-        <li><a href="https://github.com/CyriGolo"><img src="icon-github.svg" alt="github"></a></li>
+        <li><a href="https://github.com"><img src="icon-github.svg" alt="github"></a></li>
         <li><a href="https://edenschool.fr"><img src="icon-custom.svg" alt="custom"></a></li>
         <li><a href="https://linkedin.com"><img src="icon-linkedin.svg" alt="linkedin"></a></li>
         <li><a href="https://twitter.com"><img src="icon-twitter.svg" alt="twitter"></a></li>
@@ -21,7 +21,7 @@
     </nav>
     <img src="pattern-rings.svg" alt="rings" class="rings">
     <img src="pattern-circle.svg" alt="circle" class="circle">
-    <div>
+    <section class="pres">
       <article>
         <h2>Nice to meet you!</h2>
         <h2>I'm <span>Adam Keyes</span>.</h2>
@@ -30,36 +30,165 @@
       </article>
       <img id="tablet" src="image-profile-tablet.webp" alt="profile-tablet">
       <img id="desktop" src="image-profile-desktop.webp" alt="profile-desktop">
-    </div>
+    </section>
   </header>
   <main>
-    <hr>
-    <ul>
-      <li>
-        <h3>HTML</h3>
-        <p>4 Years Experience</p>
-      </li>
-      <li>
-        <h3>CSS</h3>
-        <p>4 Years Experience</p>
-      </li>
-      <li>
-        <h3>Javascript</h3>
-        <p>4 Years Experience</p>
-      </li>
-      <li>
-        <h3>Accesibility</h3>
-        <p>4 Years Experience</p>
-      </li>
-      <li>
-        <h3>React</h3>
-        <p>3 Years Experience</p>
-      </li>
-      <li>
-        <h3>Sass</h3>
-        <p>3 Years Experience</p>
-      </li>
-    </ul>
+    <section class="exp">
+      <hr>
+      <ul>
+        <li>
+          <h3>HTML</h3>
+          <p>4 Years Experience</p>
+        </li>
+        <li>
+          <h3>CSS</h3>
+          <p>4 Years Experience</p>
+        </li>
+        <li>
+          <h3>Javascript</h3>
+          <p>4 Years Experience</p>
+        </li>
+        <li>
+          <h3>Accesibility</h3>
+          <p>4 Years Experience</p>
+        </li>
+        <li>
+          <h3>React</h3>
+          <p>3 Years Experience</p>
+        </li>
+        <li>
+          <h3>Sass</h3>
+          <p>3 Years Experience</p>
+        </li>
+      </ul>
+      <section class="project">
+        <hr>
+        <div class="title">
+          <h2>Projects</h2>
+          <a class="contact proj" href="mailto:email@example.com">CONTACT ME</a>
+        </div>
+        <section class="project-list">
+          <article>
+            <div class="images">
+              <div class="views-image">
+                <a class="view" href="https://github.com">VIEW PROJECT</a>
+                <a class="view" href="https://edenschool.fr">VIEW CODE</a>
+              </div>
+              <img class="small" src="public/thumbnail-project-1-small.webp" alt="">
+              <img class="large" src="public/thumbnail-project-1-large.webp" alt="">
+            </div>
+            <h3>DESIGN PROTOLIO</h3>
+            <div class="lang">
+              <p>HTML</p>
+              <p>CSS</p>
+            </div>
+            <div>
+              <a class="view" href="https://github.com">VIEW PROJECT</a>
+              <a class="view" href="https://edenschool.fr">VIEW CODE</a>
+            </div>
+          </article>
+          <article>
+            <div class="images">
+              <div class="views-image">
+                <a class="view" href="https://github.com">VIEW PROJECT</a>
+                <a class="view" href="https://edenschool.fr">VIEW CODE</a>
+              </div>
+              <img class="small" src="public/thumbnail-project-2-small.webp" alt="">
+              <img class="large" src="public/thumbnail-project-2-large.webp" alt="">
+            </div>
+            <h3>E-LEARNING LANDING PAGE</h3>
+            <div class="lang">
+              <p>HTML</p>
+              <p>CSS</p>
+            </div>
+            <div>
+              <a class="view" href="https://github.com">VIEW PROJECT</a>
+              <a class="view" href="https://edenschool.fr">VIEW CODE</a>
+            </div>
+          </article>
+          <article>
+            <div class="images">
+              <div class="views-image">
+                <a class="view" href="https://github.com">VIEW PROJECT</a>
+                <a class="view" href="https://edenschool.fr">VIEW CODE</a>
+              </div>
+              <img class="small" src="public/thumbnail-project-3-small.webp" alt="">
+              <img class="large" src="public/thumbnail-project-3-large.webp" alt="">
+            </div>
+            <h3>TODO WEB APP</h3>
+            <div class="lang">
+              <p>HTML</p>
+              <p>CSS</p>
+              <p>JAVASCRIPT</p>
+            </div>
+            <div>
+              <a class="view" href="https://github.com">VIEW PROJECT</a>
+              <a class="view" href="https://edenschool.fr">VIEW CODE</a>
+            </div>
+          </article>
+          <article>
+            <div class="images">
+              <div class="views-image">
+                <a class="view" href="https://github.com">VIEW PROJECT</a>
+                <a class="view" href="https://edenschool.fr">VIEW CODE</a>
+              </div>
+              <img class="small" src="public/thumbnail-project-4-small.webp" alt="">
+              <img class="large" src="public/thumbnail-project-4-large.webp" alt="">
+            </div>
+            <h3>ENTERTAINMENT WEB APP</h3>
+            <div class="lang">
+              <p>HTML</p>
+              <p>CSS</p>
+              <p>JAVASCRIPT</p>
+            </div>
+            <div>
+              <a class="view" href="https://github.com">VIEW PROJECT</a>
+              <a class="view" href="https://edenschool.fr">VIEW CODE</a>
+            </div>
+          </article>
+          <article>
+            <div class="images">
+              <div class="views-image">
+                <a class="view" href="https://github.com">VIEW PROJECT</a>
+                <a class="view" href="https://edenschool.fr">VIEW CODE</a>
+              </div>
+              <img class="small" src="public/thumbnail-project-5-small.webp" alt="">
+              <img class="large" src="public/thumbnail-project-5-large.webp" alt="">
+            </div>
+            <h3>MEMORY GAME</h3>
+            <div class="lang">
+              <p>HTML</p>
+              <p>CSS</p>
+              <p>JAVASCRIPT</p>
+            </div>
+            <div>
+              <a class="view" href="https://github.com">VIEW PROJECT</a>
+              <a class="view" href="https://edenschool.fr">VIEW CODE</a>
+            </div>
+          </article>
+          <article>
+            <div class="images">
+              <div class="views-image">
+                <a class="view" href="https://github.com">VIEW PROJECT</a>
+                <a class="view" href="https://edenschool.fr">VIEW CODE</a>
+              </div>
+              <img class="small" src="public/thumbnail-project-6-small.webp" alt="">
+              <img class="large" src="public/thumbnail-project-6-large.webp" alt="">
+            </div>
+            <h3>ART GALLERY SHOWCASE</h3>
+            <div class="lang">
+              <p>HTML</p>
+              <p>CSS</p>
+              <p>JAVASCRIPT</p>
+            </div>
+            <div>
+              <a class="view" href="https://github.com">VIEW PROJECT</a>
+              <a class="view" href="https://edenschool.fr">VIEW CODE</a>
+            </div>
+          </article>
+        </section>
+      </section>
+    </section>
   </main>
 </body>
 </html>
