Fix image hover

--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
           <article>
             <div class="images">
               <div class="views-image">
-                <a class="view" href="https://github.com">VIEW PROJECT</a>
-                <a class="view" href="https://edenschool.fr">VIEW CODE</a>
+                <a class="view-img" href="https://github.com">VIEW PROJECT</a>
+                <a class="view-img" href="https://edenschool.fr">VIEW CODE</a>
               </div>
               <img class="small" src="thumbnail-project-1-small.webp" alt="">
               <img class="large" src="thumbnail-project-1-large.webp" alt="">
@@ -82,7 +82,7 @@
               <p>HTML</p>
               <p>CSS</p>
             </div>
-            <div>
+            <div class="views">
               <a class="view" href="https://github.com">VIEW PROJECT</a>
               <a class="view" href="https://edenschool.fr">VIEW CODE</a>
             </div>
@@ -90,8 +90,8 @@
           <article>
             <div class="images">
               <div class="views-image">
-                <a class="view" href="https://github.com">VIEW PROJECT</a>
-                <a class="view" href="https://edenschool.fr">VIEW CODE</a>
+                <a class="view-img" href="https://github.com">VIEW PROJECT</a>
+                <a class="view-img" href="https://edenschool.fr">VIEW CODE</a>
               </div>
               <img class="small" src="thumbnail-project-2-small.webp" alt="">
               <img class="large" src="thumbnail-project-2-large.webp" alt="">
@@ -101,7 +101,7 @@
               <p>HTML</p>
               <p>CSS</p>
             </div>
-            <div>
+            <div class="views">
               <a class="view" href="https://github.com">VIEW PROJECT</a>
               <a class="view" href="https://edenschool.fr">VIEW CODE</a>
             </div>
@@ -109,8 +109,8 @@
           <article>
             <div class="images">
               <div class="views-image">
-                <a class="view" href="https://github.com">VIEW PROJECT</a>
-                <a class="view" href="https://edenschool.fr">VIEW CODE</a>
+                <a class="view-img" href="https://github.com">VIEW PROJECT</a>
+                <a class="view-img" href="https://edenschool.fr">VIEW CODE</a>
               </div>
               <img class="small" src="thumbnail-project-3-small.webp" alt="">
               <img class="large" src="thumbnail-project-3-large.webp" alt="">
@@ -121,7 +121,7 @@
               <p>CSS</p>
               <p>JAVASCRIPT</p>
             </div>
-            <div>
+            <div class="views">
               <a class="view" href="https://github.com">VIEW PROJECT</a>
               <a class="view" href="https://edenschool.fr">VIEW CODE</a>
             </div>
@@ -129,8 +129,8 @@
           <article>
             <div class="images">
               <div class="views-image">
-                <a class="view" href="https://github.com">VIEW PROJECT</a>
-                <a class="view" href="https://edenschool.fr">VIEW CODE</a>
+                <a class="view-img" href="https://github.com">VIEW PROJECT</a>
+                <a class="view-img" href="https://edenschool.fr">VIEW CODE</a>
               </div>
               <img class="small" src="thumbnail-project-4-small.webp" alt="">
               <img class="large" src="thumbnail-project-4-large.webp" alt="">
@@ -141,7 +141,7 @@
               <p>CSS</p>
               <p>JAVASCRIPT</p>
             </div>
-            <div>
+            <div class="views">
               <a class="view" href="https://github.com">VIEW PROJECT</a>
               <a class="view" href="https://edenschool.fr">VIEW CODE</a>
             </div>
@@ -149,8 +149,8 @@
           <article>
             <div class="images">
               <div class="views-image">
-                <a class="view" href="https://github.com">VIEW PROJECT</a>
-                <a class="view" href="https://edenschool.fr">VIEW CODE</a>
+                <a class="view-img" href="https://github.com">VIEW PROJECT</a>
+                <a class="view-img" href="https://edenschool.fr">VIEW CODE</a>
               </div>
               <img class="small" src="thumbnail-project-5-small.webp" alt="">
               <img class="large" src="thumbnail-project-5-large.webp" alt="">
@@ -161,7 +161,7 @@
               <p>CSS</p>
               <p>JAVASCRIPT</p>
             </div>
-            <div>
+            <div class="views">
               <a class="view" href="https://github.com">VIEW PROJECT</a>
               <a class="view" href="https://edenschool.fr">VIEW CODE</a>
             </div>
@@ -169,8 +169,8 @@
           <article>
             <div class="images">
               <div class="views-image">
-                <a class="view" href="https://github.com">VIEW PROJECT</a>
-                <a class="view" href="https://edenschool.fr">VIEW CODE</a>
+                <a class="view-img" href="https://github.com">VIEW PROJECT</a>
+                <a class="view-img" href="https://edenschool.fr">VIEW CODE</a>
               </div>
               <img class="small" src="thumbnail-project-6-small.webp" alt="">
               <img class="large" src="thumbnail-project-6-large.webp" alt="">
@@ -181,7 +181,7 @@
               <p>CSS</p>
               <p>JAVASCRIPT</p>
             </div>
-            <div>
+            <div class="views">
               <a class="view" href="https://github.com">VIEW PROJECT</a>
               <a class="view" href="https://edenschool.fr">VIEW CODE</a>
             </div>
